--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,3 +4,11 @@ repos:
     hooks:
       - id: tf-fmt
       - id: tf-validate
+  - repo: https://github.com/python-poetry/poetry
+    rev: '1.8.2'  # add version here
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
+      - id: poetry-export
+        args: ["--without-hashes", "-f", "requirements.txt", "-o", "./requirements.txt"]
+      - id: poetry-install
